# django-unasyncify

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  check.sh  pyproject.toml
docs/: conf.py  configuration.rst  getting_started.rst  index.rst  transformation_rules.rst  unasync_helpers.rst  usage_tips.rst  why_not_sync_to_async.rst
src/django_unasyncify/: __init__.py  cmd.py  codemod.py  config.py  scaffolding.py  transform.py
tests/: _codegen.py  test_codegen.py  test_integration.py  test_transform.py
tests/proj/: one.py  one.py.expected  pyproject.toml
